#ifndef CONWAY_INCLUDE_LIFESTATE_HPP
#define CONWAY_INCLUDE_LIFESTATE_HPP

enum class LifeState {
  ALIVE,
  DEAD,
};

#endif // CONWAY_INCLUDE_LIFESTATE_HPP